--- a/client/src/components/home/components/testimonial/Testimonial.css
+++ b/client/src/components/home/components/testimonial/Testimonial.css
@@ -135,7 +135,16 @@
     height: 100%;
     background-color: var(--bg1);
   }
-
+  .testimonial-wrapper .col1 h1 {
+    width: 100%;
+    height: 100%;
+    padding: 1rem 1rem 1rem 5rem;
+    letter-spacing: 0px;
+    font-weight: normal;
+    line-height: 2rem;
+    text-align: center;
+    /* border: 1px solid black; */
+  }
   .testimonial-wrapper .col2 {
     position: absolute;
     top: 26%;
@@ -154,5 +163,41 @@
     height: 40%;
 
     /* background-color: var(--bg2); */
+  }
+  /* cards slider  */
+  .testimonial-wrapper .col4 {
+    position: absolute;
+    left: 2%;
+    top: 30%;
+  }
+
+  .testimonial-wrapper .col4 .card-wrap {
+    overflow: hidden;
+    height: 17rem;
+    width: 100%;
+  }
+
+  .testimonial-wrapper .col4 .card-wrap .card {
+    padding: 1.5rem 2rem;
+    border: 0;
+    width: 25rem;
+    height: 17rem;
+    max-height: 20rem;
+    border-radius: 1rem;
+  }
+
+  .testimonial-wrapper .col4 .card-wrap .card .row2 p {
+    opacity: 0.8;
+    height: 8rem;
+    overflow: auto;
+  }
+
+  /* arrow icons */
+  .testimonial-wrapper .col5 {
+    position: absolute;
+    left: 30%;
+    bottom: 4%;
+    display: flex;
+    gap: 1rem;
   }
 }
