--- a/client/src/components/HomeVideo/HomeVideo.css
+++ b/client/src/components/HomeVideo/HomeVideo.css
@@ -15,7 +15,8 @@
   font-size: 45px;
   font-weight: 500;
   margin-top: 5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+  color: #1e3a8a;
 }
 
 .video-container {
