--- a/client/src/components/app-bar/AppNavbar.css
+++ b/client/src/components/app-bar/AppNavbar.css
@@ -22,7 +22,7 @@
   background-color: black;
   text-transform: capitalize;
   justify-content: space-between;
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: rgb(33, 33, 33);
 }
 
 .app-navbar-wrap * {
@@ -36,7 +36,7 @@
   align-items: center;
 }
 
-.app-navbar-wrap .col2>*:hover {
+.app-navbar-wrap .col2 > *:hover {
   cursor: pointer;
 }
 
