--- a/client/src/components/product-forms/land-form/LandForm.css
+++ b/client/src/components/product-forms/land-form/LandForm.css
@@ -8,8 +8,8 @@
   display: grid;
   user-select: none;
   place-items: center;
-  height: calc(110vh - 5rem);
-  /* border: 1px solid black; */
+  height: calc(120vh - 5rem);
+  padding-top: 12rem;
 }
 
 .land-form-container {
