--- a/client/src/components/HomeVideo/HomeVideo.css
+++ b/client/src/components/HomeVideo/HomeVideo.css
@@ -11,10 +11,10 @@
 .home-video h2 {
   width: 100%;
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 45px;
   font-weight: 500;
-  margin-top: 5rem;
+  margin-top: 2rem;
   margin-bottom: 0;
   color: #1e3a8a;
 }
@@ -60,6 +60,7 @@
     font-size: 28px;
     font-weight: 500;
     margin-bottom: 3rem;
+    margin-top: 0;
   }
 }
 
