--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&display=swap");
-
+.home-wrap {
+}
+.testi-section {
+  height: 100vh;
+}
 /* auto slider */
 
 #carouselExampleIndicators {
@@ -53,47 +57,6 @@
 .featured-category-header h2 {
   font-size: 45px;
   font-weight: 500;
-}
-
-/* Section 1 */
-.home-banner {
-  height: 100vh;
-}
-
-/* Section 2 */
-.home-play {
-  height: 100vh;
-}
-
-/* Section 3 */
-.home-slider {
-  height: 100vh;
-}
-
-/* Section 4 */
-.home-whyus {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.home-testimonial {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.home-calculator {
-  height: 100vh;
-}
-
-.home-footer {
-  height: 40vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
 }
 
 @media screen and (max-width: 600px) {
